--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "gabrielsens-uikit",
   "private": false,
-  "version": "0.0.5",
+  "version": "0.0.11",
   "files": [
     "dist"
   ],
   "publishConfig": {
     "access": "public"
   },
+  "sideEffects": false,
   "main": "dist/src/index.js",
   "module": "dist/src/index.mjs",
   "types": "dist/src/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/src/index.mjs",
-      "default": "./dist/src/index.mjs",
       "require": "./dist/src/index.js",
-      "types": "./dist/src/index.d.ts"
+      "types": "./dist/src/index.d.ts",
+      "default": "./dist/src/index.mjs"
     },
     "./styles.css": "./dist/src/styles/index.css",
     "./utils": {
       "import": "./dist/src/utils.mjs",
-      "default": "./dist/src/utils.mjs",
       "require": "./dist/src/utils.js",
-      "types": "./dist/src/utils.d.ts"
+      "types": "./dist/src/utils.d.ts",
+      "default": "./dist/src/utils.mjs"
     },
     "./tailwind-preset": {
       "import": "./dist/tailwind.config.mjs",
-      "default": "./dist/tailwind.config.mjs",
       "require": "./dist/tailwind.config.js",
-      "types": "./dist/tailwind.config.d.ts"
+      "types": "./dist/tailwind.config.d.ts",
+      "default": "./dist/tailwind.config.mjs"
     }
   },
   "scripts": {
