--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   ],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
+  "react/prop-types": "off",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
@@ -35,6 +36,7 @@
     "semi": [
       "error",
       "always"
-    ]
+    ],
+    "react/react-in-jsx-scope": "off"
   }
 }
