--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com
-          scope: 'gabrielsens'
+          scope: '@gabrielsens'
       - name: install yarn global
         run: npm install --global yarn
       - name: Install Deps
