--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          registry-url: https://npm.pkg.github.com
+          registry-url: 'https://npm.pkg.github.com'
           scope: '@gabrielsens'
       - name: install yarn global
         run: npm install --global yarn
