--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gabrielsens-uikit",
+  "name": "@gabrielsens/uikit",
   "private": false,
-  "version": "0.0.13",
+  "version": "0.0.14",
   "files": [
     "dist"
   ],
